akimbo bug fixed; some new bugs added
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4598 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -66,6 +66,12 @@ docargument [B] [the subtrahend] [] [0];
 
 
 
+docident [!] [Performs a negation.];
+
+docargument [A] [argument] [] [0];
+
+
+
 docident [!=] [Determines if two values are not equal.];
 
 docargument [A] [first value] [] [0];
@@ -205,6 +211,14 @@ docident [!=f] [Determines if a floating-point value is not equal to a second fl
 docargument [A] [the first value] [] [0];
 
 docargument [B] [the second value] [] [0];
+
+
+
+docident [*f] [Performs a floating point multiplication.];
+
+docargument [A] [the multiplicand] [] [0];
+
+docargument [B] [the multiplier] [] [0];
 
 
 
@@ -384,6 +398,12 @@ docargument [B] [enable auto map download] [min 0/max 1/default 1];
 
 
 
+docident [autogetnewmaprevisions] [Automatically get new map revisions from the server.];
+
+docargument [N] [0: no, 1: yes] [min 0/max 1/default 0];
+
+
+
 docident [autoscreenshot] [Toggle for taking an automatic screenshot during intermission.];
 
 docargument [B] [0=Off, 1=On] [min 0/max 1/default 1];
@@ -455,6 +475,12 @@ docident [dbgts] [Enable triangle debug.];
 docargument [B] [triangle debug] [min 0/max 1/default 0];
 
 docremark [Prints details while connecting triangles of 3d models.];
+
+
+
+docident [debugargs] [Dump all command arguments to STDOUT];
+
+docargument [...] [...] [] [1];
 
 
 
@@ -780,6 +806,10 @@ docargument [B] [the autoreload state] [on (1), off (0) min 0/max 1/default 1];
 
 
 
+docident [benchme] [Move from active team to spectator during match.];
+
+
+
 docident [botskill] [changes the skill level for the given bot.];
 
 docargument [N] [botname] [the name of the bot] [0];
@@ -809,6 +839,22 @@ docexample [botsshoot 0] [Bots won't shoot.];
 docident [changefollowplayer] [];
 
 docargument [D] [delta] [how many players to shift +/-] [0];
+
+
+
+docident [clearignored] [Clear list of ignored players.];
+
+docargument [A] [optional client number] [] [0];
+
+docremark [Omit the client number to clear the whole list.];
+
+
+
+docident [clearmuted] [Clear list of muted players.];
+
+docargument [A] [optional client number] [] [0];
+
+docremark [Omit the client number to clear the whole list.];
 
 
 
@@ -874,7 +920,25 @@ docexample [echo playing: (curmap) vote for: (curmap 1)] [output: playing maps/a
 
 
 
+docident [curmaprevision] [Current map revision number.];
+
+docargument [] [-] [ read-only];
+
+
+
+docident [curmastermode] [Returns the current mastermode];
+
+
+
 docident [curmode] [Returns the mode number for the current game.];
+
+
+
+docident [curmodeattr] [Checks the current game mode for certain attributes.];
+
+docargument [A] [attribute name] [] [0];
+
+docremark [Possible attributes are: team, arena, flag and bot.];
 
 
 
@@ -958,6 +1022,10 @@ docremark [This does not work in multiplayer. For entertainment purposes only :)
 
 
 
+docident [getclientmode] [Returns the current game mode number.];
+
+
+
 docident [getdemo] [];
 
 docargument [X] [number in list] [] [0];
@@ -981,6 +1049,14 @@ docargument [T] [off OR on] [0||1] [0];
 docexample [idlebots 1] [Will make the bots stand still.];
 
 docexample [idlebots 0] [Will enable the bots to move and shoot.];
+
+
+
+docident [ignore] [Ignore a player.];
+
+docargument [A] [client number] [] [0];
+
+docremark [You won't see any further game chat or hear any more voice com messages from that player.];
 
 
 
@@ -1017,6 +1093,14 @@ docident [listcomplete] [];
 
 
 docident [listdemos] [];
+
+
+
+docident [listignored] [Print a list of all players that you are currently ignoring.];
+
+
+
+docident [listmuted] [Print a list of all players that you have muted.];
 
 
 
@@ -1084,7 +1168,51 @@ docargument [V] [] [min 1/max 32/default 1];
 
 
 
+docident [me] [Action chat message.];
+
+docargument [...] [...] [] [1];
+
+
+
 docident [minutesremaining] [Returns the remaining minutes of the currently played game. READ ONLY];
+
+
+
+docident [modconnect] [Connect to a modded server.];
+
+docargument [A] [IP] [] [0];
+
+docargument [B] [port] [] [0];
+
+docargument [C] [password] [] [0];
+
+docremark [The modified server needs to use the original client-server protocol. The protocol version number will be the negated value of an unmodded server.];
+
+
+
+docident [modconnectadmin] [Connect to a modded server and claim admin.];
+
+docargument [A] [IP] [] [0];
+
+docargument [B] [port] [] [0];
+
+docargument [C] [admin password] [] [0];
+
+docremark [The modified server needs to use the original client-server protocol. The protocol version number will be the negated value of an unmodded server.];
+
+
+
+docident [modlanconnect] [Connect to a modified LAN server.];
+
+docremark [The modified server needs to use the original client-server protocol. The protocol version number will be the negated value of an unmodded server.];
+
+
+
+docident [muteplayer] [Mute a player];
+
+docargument [A] [client number] [] [0];
+
+docremark [You won't hear any further voice com messages from that player.];
 
 
 
@@ -1198,7 +1326,19 @@ docremark [See the player model folder for the according skin-id.];
 
 
 
-docident [spectate] [Toggle into spectator mode - only possible when you're dead!];
+docident [skin_cla] [Choose skin when playing for team CLA.];
+
+docargument [N] [skin id] [] [0];
+
+
+
+docident [skin_rvsf] [Choose skin when playing for team RVSF.];
+
+docargument [N] [skin id] [] [0];
+
+
+
+docident [spectatemode] [Toggle into spectator mode - only possible when you're dead!];
 
 dockey [SPACE] [] [switch spectator mode];
 
@@ -1298,6 +1438,12 @@ docident [addwp] [];
 
 
 
+docident [advancemaprevision] [Select the increment of the map revision number for the next 'savemap'.];
+
+docargument [N] [increment] [min 1/max 100/default 1];
+
+
+
 docident [applymapsoundchanges] [during map editing, drop all mapsounds so they can be re-added];
 
 
@@ -1329,6 +1475,12 @@ docident [autowp] [];
 docident [clearents] [Deletes all entities of said type.];
 
 docargument [T] [the entity type, see command 'newent'] [string] [0];
+
+
+
+docident [closestenttype] [Restrict 'closest entity' display to one entity type.];
+
+docargument [A] [entity type] [] [0];
 
 
 
@@ -1371,6 +1523,12 @@ docident [delpath2way2] [];
 
 
 docident [delwp] [];
+
+
+
+docident [editaxis] [Contains the main axis of the player orientation.];
+
+docargument [N] [11: X, 12: Y, 13: Z] [min 0/max 13/default 0];
 
 
 
@@ -1442,6 +1600,10 @@ docremark [Overwrites the closest entity with the specified values.];
 
 
 
+docident [entstats] [Print some map entity statistics to the console.];
+
+
+
 docident [equalize] [Levels the floor/ceiling of the selection.];
 
 docargument [T] [an integer denoting the type] [0 (floor), 2 (ceiling)] [0];
@@ -1472,6 +1634,10 @@ docident [getenttype] [];
 
 
 
+docident [getmapmsg] [Returns the map message of the current map.];
+
+
+
 docident [heightfield] [Marks the current selection as a heightfield.];
 
 docargument [T] [an integer denoting the type] [0 (floor), 2 (ceiling)] [0];
@@ -1490,6 +1656,22 @@ docremark [After changing this value, a "recalc" is needed to see the difference
 
 
 
+docident [listmapdependencies] [Prints all media dependencies of a map to a file.];
+
+docargument [A] [map name] [] [0];
+
+docremark [The output will be added to the file 'mapdependencies.txt'.];
+
+
+
+docident [listmapdependencies_all] [Prints all media dependencies of all maps to a file.];
+
+docargument [A] [42] [] [0];
+
+docremark [The output will be written to the file 'mapdependencies.txt'.];
+
+
+
 docident [Map editing] [A variable indicating if the game is in editmode.];
 
 docargument [B] [editmode] [1 (true), 0 (false) read-only];
@@ -1498,7 +1680,7 @@ docargument [B] [editmode] [1 (true), 0 (false) read-only];
 
 docident [mapenlarge] [Enlarges the current map.];
 
-docremark [This command will make the current map 1 power of two bigger. So a 6 size map (64x64 units) it will become a 7 map (128x128), with the old map in the middle (from 32-96) and the new areas solid.];
+docremark [This command will make the current map 1 power of two bigger. So a size 6 map (64x64 units) will become a size 7 map (128x128), with the old map in the middle (from 32-96) and the new areas solid.];
 
 
 
@@ -1509,6 +1691,22 @@ docargument [M] [The map message] [String] [0];
 docremark [You will need to use quote marks around the message, otherwise it save the message correctly.];
 
 docremark [For example: /mapmsg "Map By Author"];
+
+
+
+docident [mapshrink] [Reduces the world size by 1.];
+
+docremark [This command will make the current map 1 power of two smaller. So a size 7 map (128x128) will become a 6 size map (64x64 units), by removing 32 cubes from each side. The area to be removed needs to be empty (= all solid).];
+
+
+
+docident [movemap] [Move the whole map (including all entities) in the specified direction.];
+
+docargument [dX] [x-offset] [] [0];
+
+docargument [dY] [y-offset] [] [0];
+
+docargument [dZ] [z-offset] [] [0];
 
 
 
@@ -1551,6 +1749,8 @@ docargument [Y] [Y radius around the box center] [integer] [0];
 docargument [H] [height of the box] [integer] [0];
 
 docremark [Defines a clipping box against which the player will collide.];
+
+docremark [Use this clip type to clip visible obstacles like fences or the gas tank. If you only want to prevent a player from entering an area, use plclip instead.];
 
 
 
@@ -1614,6 +1814,24 @@ docremark [The yaw is taken from the current camera yaw.];
 
 
 
+docident [newent plclip] [Adds a player clip entity.];
+
+docargument [Z] [elevation above the ground] [integer] [0];
+
+docargument [X] [X radius around the box center] [integer] [0];
+
+docargument [Y] [Y radius around the box center] [integer] [0];
+
+docargument [H] [height of the box] [integer] [0];
+
+docremark [Defines a clipping box against which (only) the player will collide.];
+
+docremark [Use this clip type to define no-go areas for players without visible obstacles, for example to prevent players from walking on a wall.];
+
+docremark [Nades will not be affected by this clip type.];
+
+
+
 docident [newent sound] [Adds a sound entity.];
 
 docargument [N] [the sound to play] [integer] [0];
@@ -1635,6 +1853,18 @@ docident [newmap] [Creates a new map.];
 docargument [S] [the size of the new map] [6..12] [0];
 
 docremark [The new map has 2^S cubes. For S, 6 is small, 7 medium, 8 large.];
+
+
+
+docident [nextclosestent] [Choose another 'closest ent'.];
+
+docremark [Use this, when two entities are placed in exactly the same location.];
+
+
+
+docident [nextplayerstart] [Visit next player spawn entity.];
+
+docargument [TYPE] [0|1|100] [] [0];
 
 
 
@@ -1692,9 +1922,9 @@ docremark [Where you store a map depends on the complexity of what you are creat
 
 docident [scalelights] [Scales all lights in the map.];
 
-docargument [P] [percentage] [] [0];
+docargument [S] [size change (percentage)] [] [0];
 
-docargument [I] [intensity] [] [0];
+docargument [I] [intensity change (percentage)] [] [0];
 
 docremark [This command is useful if a map is too dark or bright but you want to keep the light entities where they are.];
 
@@ -1716,6 +1946,44 @@ docremark [Coordinates are as follows: after a "newmap 6" the top-left corner (t
 
 
 
+docident [selectionflip] [Flip the selected part of the map at an axis.];
+
+docargument [AXIS] [X or Y] [] [0];
+
+
+
+docident [selectionrotate] [Rotate the selected part of the map in 90 degree steps.];
+
+docargument [D] [steps] [] [0];
+
+docremark [To rotate clockwise, use a positive number of steps. Note, that only quadratic selections can be rotated by 90 degrees.];
+
+
+
+docident [selx] [Current selection: x-coordinate];
+
+docargument [N] [x] [min 0/max 4096/default 0];
+
+
+
+docident [selxs] [Current selection: x-span];
+
+docargument [N] [xs] [min 0/max 4096/default 0];
+
+
+
+docident [sely] [Current selection: y-coordinate];
+
+docargument [N] [y] [min 0/max 4096/default 0];
+
+
+
+docident [selys] [Current selection: y-span];
+
+docargument [N] [ys] [min 0/max 4096/default 0];
+
+
+
 docident [setjumpwp] [];
 
 
@@ -1727,6 +1995,12 @@ docident [setwpyaw] [takes the current player yaw for the current waypoint];
 docident [showmip] [Toggles between showing what parts of the scenery are rendered.];
 
 docremark [Shows what parts of the scenery are rendered using what size cubes, and outputs some statistics about it. This can give map editors hints as to what architecture to align, textures to change, etc.];
+
+
+
+docident [showmodelclipping] [Show mapmodel clipping during edit mode.];
+
+docargument [N] [-] [min 0/max 1/default 0];
 
 
 
@@ -1878,6 +2152,12 @@ docremark [This command should be placed after newmenu.];
 
 
 
+docident [menuinitselection] [Defines the initial selection for a menu.];
+
+docargument [A] [line number] [] [0];
+
+
+
 docident [menuitem] [Creates a new menuitem.];
 
 docargument [N] [The menuitem description.] [] [0];
@@ -1912,6 +2192,18 @@ docident [menuitemtextinput] [];
 
 
 
+docident [menuitemvar] [Creates a new menuitem with variable content.];
+
+docargument [N] [The cubescript to generate the menuitem description.] [] [0];
+
+docargument [A] [The command to execute on selection of the menuitem.] [] [0];
+
+docargument [H] [The command to execute upon rolling over the menuitem.] [] [0];
+
+docremark [Like 'menuitem', but the menuitem description will be the result of an evaluation, everytime the menu gets displayed.];
+
+
+
 docident [menumdl] [Specifies a model to render while displaying the last added menu.];
 
 docargument [M] [the model] [] [0];
@@ -1921,6 +2213,26 @@ docargument [A] [the animation to play] [] [0];
 docargument [R] [the rotation speed] [] [0];
 
 docargument [S] [the scale] [] [0];
+
+
+
+docident [menuselection] [Selects a line in a menu.];
+
+docargument [A] [menu name] [] [0];
+
+docargument [B] [line number] [] [0];
+
+
+
+docident [menuselectionbgcolor] [Defines the background color for the menu selection bar.];
+
+docargument [R] [red (0..100)] [] [0];
+
+docargument [G] [green (0..100)] [] [0];
+
+docargument [B] [blue (0..100)] [] [0];
+
+docargument [A] [alpha (0..100)] [] [0];
 
 
 
@@ -2034,6 +2346,12 @@ docargument [V] [] [min 0/max 100/default 40];
 
 
 
+docident [hidebigmenuimages] [Hide big images in menus.];
+
+docargument [N] [0: show, 1: hide] [min 0/max 1/default 0];
+
+
+
 docident [hidecompass] [];
 
 docargument [V] [] [min 0/max 1/default 0];
@@ -2138,6 +2456,12 @@ docargument [V] [] [min 0/max 1/default 0];
 
 
 
+docident [oldfashionedgunstats] [Show ammo stats like in 1.0];
+
+docargument [N] [0: new, 1: old] [min 0/max 1/default 0];
+
+
+
 docident [radarentsize] [];
 
 docargument [V] [] [min 1/max 64/default 4];
@@ -2171,6 +2495,12 @@ docargument [V] [] [min 1/max 10/default 2];
 docident [recoiltest] [];
 
 docargument [V] [] [min 0/max 1/default 0];
+
+
+
+docident [righthanded] [Choose player hand to carry the weapon.];
+
+docargument [N] [0: lefty, 1: righty] [min 0/max 1/default 1];
 
 
 
@@ -2724,6 +3054,16 @@ docargument [V] [] [min 0/max 100/default 40];
 
 
 
+docident [music] [Play music in the background.];
+
+docargument [A] [music file name] [] [0];
+
+docargument [B] [playtime] [] [0];
+
+docargument [C] [command to be executed, when music is done] [] [0];
+
+
+
 docident [musicvol] [Sets the music volume.];
 
 docargument [N] [the volume] [min 0/max 255/default 128];
@@ -2914,6 +3254,14 @@ docsection [Server commands]
 
 
 
+docident [addfavcategory] [Adds a new category in the serverbrowser favourites.];
+
+docargument [A] [reference designator (keep short and unique)] [] [0];
+
+docremark [Add new categories to your autoexec.cfg, check favourites.cfg for examples.];
+
+
+
 docident [autoteam] [Sets automated team assignment.];
 
 docargument [B] [Enables or disables auto team.] [1 (On), 0 (Off)] [0];
@@ -2940,6 +3288,12 @@ docremark [This command is wrapped by aliases for better usability and is used t
 
 
 
+docident [deleteservermap] [Deletes a map from the current server.];
+
+docargument [A] [map name] [] [0];
+
+
+
 docident [forceteam] [Forces the specified player to join the enemy team.];
 
 docargument [CN] [The player to assign to a team] [Client number] [0];
@@ -2954,15 +3308,25 @@ docremark [Requires admin state. The admin will lose his admin state after succe
 
 
 
+docident [hidefavicons] [Hide favourites icons in serverbrowser.];
+
+docargument [N] [0: show, 1: hide] [min 0/max 1/default 0];
+
+
+
 docident [kick] [Kicks the specified player from the server.];
 
 docargument [CN] [The player to kick] [Client number] [0];
 
 
 
+docident [listfavcats] [List all registered serverbrowser favourites categories];
+
+
+
 docident [mastermode] [Sets the mastermode for the server.];
 
-docargument [N] [The master mode] [0 (Open), 1 (Private)] [0];
+docargument [N] [The master mode] [0 (Open), 1 (Private), 2 (Match)] [0];
 
 docremark [If the mastermode is set to 'private', no more clients can join the server. Default is 'open' which allows anyone to join the server.];
 
@@ -2990,11 +3354,31 @@ docargument [V] [] [min 0/max 2/default 1];
 
 
 
-docident [sendmap] [Sends the current map to the server and sends other players a message about it.];
+docident [searchnickname] [Search a nickname (or -part) on all servers.];
 
-docargument [M] [Map to save and reload locally] [] [0];
+docargument [N] [nickname to search] [] [0];
 
-docremark [If the map argument is specified, the map is first saved and then reloaded before sending it. Note: It's always required to be on the map one wants to send before issuing this command!];
+
+
+docident [sendmap] [Sends a map to the server.];
+
+docargument [M] [map to send] [] [0];
+
+docremark [During coop edit, the current map gets saved to file and sent to the server. Other players can use 'getmap' to download it.];
+
+docremark [When not in edit mode, the map will not be saved. The new map will be used, when the next game on that map starts on the server.];
+
+
+
+docident [serverbrowserhidefavtag] [Hide favourites tag column in serverbrowser];
+
+docargument [N] [-] [min 0/max 2/default 1];
+
+
+
+docident [serverbrowserhideip] [Hide server IP and port in serverbrowser.];
+
+docargument [N] [-] [min 0/max 2/default 2];
 
 
 
@@ -3020,6 +3404,16 @@ docargument [V] [] [min 0/max NUMSERVSORT-1/default 0];
 
 
 
+docident [serversortdir] [Select ascending of descending sort order in serverbrowser.];
+
+
+
+docident [serversortpreferofficial] [Sort official maps over custom maps in serverbrowser.];
+
+docargument [N] [-] [min 0/max 1/default 1];
+
+
+
 docident [servpingrate] [];
 
 docargument [V] [] [min 1000/max 60000/default 5000];
@@ -3039,6 +3433,38 @@ docremark [Failed logins result in an auto kick. The admin is granted the right 
 docident [showallservers] [];
 
 docargument [V] [] [min 0/max 1/default 1];
+
+
+
+docident [showminremain] [Show 'minutes remaining' in serverbrowser.];
+
+docargument [N] [] [min 0/max 1/default 0];
+
+
+
+docident [shownamesinbrowser] [Show player names in serverbrowser.];
+
+docargument [N] [-] [min 0/max 1/default 0];
+
+
+
+docident [showonlyfavourites] [Show only servers of one favourites category in serverbrowser.];
+
+docargument [N] [category index] [min 0/max 100/default 0];
+
+
+
+docident [showonlygoodservers] [Show only servers with the correct protocol in serverbrowser.];
+
+docargument [N] [-] [min 0/max 1/default 0];
+
+
+
+docident [showweights] [Show 'weights' in serverbrowser.];
+
+docargument [N] [] [min 0/max 1/default 0];
+
+docremark ['weights' are the sort criteria with the highest priority. Favourites categories can change the weights. Use 'showweights' to debug problems with serverbrowser sorting.];
 
 
 
