--- a/ac/config/favourites.cfg
+++ b/ac/config/favourites.cfg
@@ -54,6 +54,7 @@ sbfavourite_LOVE_red = 0
 sbfavourite_LOVE_green = 100
 sbfavourite_LOVE_blue = 0
 sbfavourite_LOVE_weight = 255            // because love trumps hate, sheldon
+sbfavourite_LOVE_image = packages/misc/heart.png
 
 addfavcategory LIKE
 sbfavourite_LIKE_desc = "Nice, too"
