--- a/ac/config/font.cfg
+++ b/ac/config/font.cfg
@@ -95,7 +95,8 @@ fontchar 270 448 40  64 	//}
 fontchar 310 448 53  64 	//~
 
 font huddigits "packages/misc/huddigits.png" 40 64
-fontskip 48
+fontskip 47
+fontchar 476 64  24  64     ///
 fontchar 4   64  40  64     //0
 fontchar 52  64  40  64     //1
 fontchar 100 64  40  64     //2
@@ -106,4 +107,24 @@ fontchar 292 64  40  64     //6
 fontchar 340 64  40  64     //7
 fontchar 388 64  40  64     //8
 fontchar 436 64  40  64     //9
+
+font serverquality "packages/misc/serverquality.png" 48 64
+fontskip 48
+fontchar 0   64  48  64     //0 "unknown"
+fontchar 48  64  48  64     //1 "very bad"
+fontchar 96  64  48  64     //2 "bad"
+fontchar 144 64  48  64     //3 "medium"
+fontchar 192 64  48  64     //4 "good"
+fontchar 240 64  48  64     //5 "very good"
+
+font bargraphs "packages/misc/bargraphs.png" 32 64
+fontskip 48
+fontchar 0   64  32  64     //0 [ ][ ]
+fontchar 32  64  32  64     //1 [x][ ]
+fontchar 64  64  32  64     //2 [ ][x]
+fontchar 96  64  32  64     //3 [x][x]
+fontchar 128 64  64  64     //4 [black]
+fontchar 192 64  64  64     //5 [green]
+fontchar 256 64  64  64     //6 [yellow]
+fontchar 320 64  64  64     //7 [red]
 
