--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -22,7 +22,7 @@ alias genmapitems [
     alias n (listlen $arg1)
     loop i $n [
         alias listmapname (at $arg1 $i)
-        menuitem $listmapname (concat map $listmapname)
+        menuitemimage (concatword "packages/maps/official/preview/" $listmapname ".jpg") $listmapname (concat map $listmapname)
         alias next (+ $i 1)
         if (= $next $n) [ alias next 0 ] []
         alias nextmap (at $arg1 $next)
