--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -32,8 +32,9 @@ menuitem "3Quit AssaultCube"		"savequit"
 menuinitselection 12
 
 alias __ingamemenu_showmodel [
-        if (curteam) [alias __curskin (+ 1 $skin_rvsf)] [alias __curskin (+ 1 $skin_cla)]
-	if $arg2 [chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF" (curteam)) "/0" $__curskin) idle 15 3] [chmenumdl $arg1]
+	if (< (curteam) 4) [
+		if $arg2 [chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF" (curteam)) "/0" (+ 1 (skin))) idle 15 3] [chmenumdl $arg1]
+	]
 ]
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
