--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -30,10 +30,12 @@ loop i (listlen $mapcommands) [
 
 complete demo "demos" dmo
 
-alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip"]
+alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip plclip"]
 entcomplete newent
 entcomplete clearents
 entcomplete closestenttype
+
+listcomplete team "CLA RVSF CLA-SPECT RVSF-SPECT SPECTATOR"
 
 // Game mode descriptions...
 gamemodedesc 0 [Team Deathmatch: Find the enemy team and destroy them!]
@@ -57,13 +59,7 @@ gamemodedesc 15 [Keep the Flag: Get the flag and keep it. You score one point ev
 alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
 
 // "changeteam" command.
-alias changeteam [
-    if (= (curteam) 1) [ team CLA; alias tmp_oldteam 1 ] [ team RVSF; alias tmp_oldteam 0 ]
-    if (curmodeattr team) [
-        if (= (curteam) 0) [ if (= $tmp_oldteam 0) [ echo "You stayed on team 3CLA" ] [ echo "You switched to team 3CLA" ] ]
-        if (= (curteam) 1) [ if (= $tmp_oldteam 1) [ echo "You stayed on team 1RVSF" ] [ echo "You switched to team 1RVSF" ] ]
-    ]
-]
+alias changeteam [ if (< (curteam) 2) [ team (at "RVSF CLA" (curteam)) ] ]
 
 
 // Mode/map-setting aliases.
