skin display fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4610 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -33,14 +33,13 @@ menuinitselection 12
 
 alias __ingamemenu_showmodel [
 	if (< (curteam) 4) [
-		if $arg2 [chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF" (curteam)) "/0" (+ 1 (skin))) idle 15 3] [chmenumdl $arg1]
+		if $arg2 [chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF CLA RVSF" (curteam)) "/0" (+ 1 (skin))) idle 15 3] [chmenumdl $arg1]
 	]
 ]
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
 newmenu "In-game admin"
 
-menuinit [__ingamemenu_showmodel "In-game admin"]
 menuitem "Set mode/map..."			"showmenu Gamemode"
 menuitem "Kick/ban player..."		"showmenu kick/ban"
 menuitem "Adjust teams..."			[ showmenu "Team adjustment" ]
@@ -59,6 +58,7 @@ menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
 menuitem "4Browse servers..."		[ closemenu "In-game admin"; joinservermenu ]
 menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
+menuinitselection 15
 
 // Multiplayer menu only opens through the main menu (when disconnected).
 newmenu multiplayer
