skin display fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4612 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -32,8 +32,10 @@ menuitem "3Quit AssaultCube"		"savequit"
 menuinitselection 12
 
 alias __ingamemenu_showmodel [
-	if (< (curteam) 4) [
-		if $arg2 [chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF CLA RVSF" (curteam)) "/0" (+ 1 (skin))) idle 15 3] [chmenumdl $arg1]
+	if (&& (< (curteam) 4) $arg2) [
+		chmenumdl $arg1 (concatword "playermodels/" (at "CLA RVSF CLA RVSF" (curteam)) "/0" (+ 1 (skin))) idle 15 3
+	] [
+		chmenumdl $arg1
 	]
 ]
 
