--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -59,7 +59,7 @@ gamemodedesc 15 [Keep the Flag: Get the flag and keep it. You score one point ev
 alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
 
 // "changeteam" command.
-alias changeteam [ if (< (curteam) 2) [ team (at "RVSF CLA" (curteam)) ] ]
+alias changeteam [ if (< (curteam) 4) [ team (at "RVSF CLA RVSF-SPECT CLA-SPECT" (curteam)) ] ]
 
 
 // Mode/map-setting aliases.
