more teamchange fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4615 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -17,6 +17,7 @@ newmenu "In-game"
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1" [__ingamemenu_showmodel "In-game" 0]
 menuitem "Change weapon..."        	"showmenu Weapons"  [__ingamemenu_showmodel "In-game" 0]
 menuitem "Change to the enemy team"	"changeteam" [__ingamemenu_showmodel "In-game" 1]
+menuitem "Change to spectate mode"      "gospectate" [__ingamemenu_showmodel "In-game" 1]
 menuitem "Change player skin..."        [showmenu (at [CLA RVSF] (curteam))]  [__ingamemenu_showmodel "In-game" 1]
 menuitem "" -1  [__ingamemenu_showmodel "In-game" 0]
 menuitem "Set mode/map..."		"showmenu Gamemode"
@@ -29,7 +30,7 @@ menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
 menuitem "4Browse servers..."	[ closemenu "In-game"; joinservermenu ]
 menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
-menuinitselection 12
+menuinitselection 13
 
 alias __ingamemenu_showmodel [
 	if (&& (< (curteam) 4) $arg2) [
@@ -52,7 +53,8 @@ menuitem "Give admin..."			[ showmenu "give admin" ]
 menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
 menuitem "Change weapon..."        	"showmenu Weapons" [__ingamemenu_showmodel "In-game admin" 0]
-menuitem "Change to the enemy team"        "changeteam" [__ingamemenu_showmodel "In-game admin" 1]
+menuitem "Change to the enemy team"     "changeteam" [__ingamemenu_showmodel "In-game admin" 1]
+menuitem "Change to spectate mode"      "gospectate" [__ingamemenu_showmodel "In-game admin" 1]
 menuitem "Change player skin..."          [showmenu (at [CLA RVSF] (curteam))] [__ingamemenu_showmodel "In-game admin" 1]
 menuitem "Demos..."			"showmenu Demo" [__ingamemenu_showmodel "In-game admin" 0]
 menuitem "" -1
@@ -60,7 +62,7 @@ menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
 menuitem "4Browse servers..."		[ closemenu "In-game admin"; joinservermenu ]
 menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
-menuinitselection 15
+menuinitselection 16
 
 // Multiplayer menu only opens through the main menu (when disconnected).
 newmenu multiplayer
@@ -119,11 +121,11 @@ menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
 menuitem "One Shot, One Kill"		"mode 10; showmenu maps"
 menuitem "Team One Shot, One Kill"	"mode 11; showmenu maps"
 
-
 newmenu Mastermode
 
 menuitem "Unlock the server (open)"		"mastermode 0"
 menuitem "Lock the server (private)"		"mastermode 1"
+menuitem "Lock the server (match mode)"		"mastermode 2"
 
 newmenu Auto-team
 
