finish adding ac_werk into AC
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4623 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -198,6 +198,7 @@ mapmodel 1 1 0 0 "rattrap/milkcrate2"		// 135
 // mapmodel 1 2 0 0 "rattrap/rbbox"		// Box mapmodel, specific to ac_rattrap.
 // mapmodel 1 3 0 0 "rattrapbarrel"		// Steel barrel mapmodel, specific to ac_rattrap.
 // mapmodel 1 2 0 0 "rattrapbarrel2"		// Steel barrel mapmodel, specific to ac_rattrap.
+// mapmodel 1 1 0 0 "misterfloppy/valve_hor"	// Valve mapmodel, specific to ac_werk.
 
 
 // The skymap for this map. You can change this by commenting the one below, and then uncommenting one of your choosing
