--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -106,9 +106,13 @@ ac_gothic     :13:10: 1:12:13: 0     // htf, 10 minutes, 12..13 players
 ac_rattrap    : 2: 8: 1: 2: 5: 1     // dm, 8 minutes, 2..5 players
 ac_rattrap    : 0:10: 1: 6: 0: 0     // tdm, 10 minutes, 6.. players
 
-ac_arabian     :15: 6: 1: 2: 3: 2     // ktf, 6 minutes, 2..3 players
-ac_arabian     : 5:12: 1: 4:11: 1     // ctf, 12 minutes, 4..11 players
-ac_arabian     :13:10: 1:12:13: 0     // htf, 10 minutes, 12..13 players
+ac_arabian    :15: 6: 1: 2: 3: 2     // ktf, 6 minutes, 2..3 players
+ac_arabian    : 5:12: 1: 4:11: 1     // ctf, 12 minutes, 4..11 players
+ac_arabian    :13:10: 1:12:13: 0     // htf, 10 minutes, 12..13 players
+
+ac_werk       :15: 6: 1: 2: 3: 2     // ktf, 6 minutes, 2..3 players
+ac_werk       : 5:12: 1: 4:11: 1     // ctf, 12 minutes, 4..11 players
+ac_werk       :13:10: 1:12:13: 0     // htf, 10 minutes, 12..13 players
 
 // Change this file to make the map rotation different and add more..
 // do only use standard maps and maps from your packages/maps/servermaps folder!
