--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -32,7 +32,7 @@ alias genmapitems [
 newmenu maps
 // Add maps to the below list to include them in the normal map menu (also for botmaps).
 // Don't add ac_depot_classic to the maps list.
-alias defaultmaps "ac_aqueous ac_arabian ac_arctic ac_arid ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_power ac_rattrap ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+alias defaultmaps "ac_aqueous ac_arabian ac_arctic ac_arid ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_power ac_rattrap ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban ac_werk"
 genmapitems	$defaultmaps
 menuitem	"" -1
 if (&& $mappack_version (listlen $mappack_maps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack maps"]];
@@ -44,7 +44,7 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_flags 
 // Add maps to the below list to include them in the CTF, KTF & TKTF map menu. Maps should contain flags here.
-alias ctfmaps "ac_aqueous ac_arabian ac_arid ac_depot ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
+alias ctfmaps "ac_aqueous ac_arabian ac_arid ac_depot ac_desert3 ac_douze ac_elevation ac_gothic ac_iceroad ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban ac_werk"
 genmapitems $ctfmaps
 menuitem "" -1
 if (&& $mappack_version (listlen $mappack_flagmaps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack flag maps"]];
@@ -127,7 +127,6 @@ menuitem "-----------------------------------" -1
 menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." -1
 menuitem "RandumKiwi			Mapping, documentation, tester, clean-up crew." -1
 menuitem "Flowtron			Universal team member, additional code, admin, community chief." -1
-menuitem "stef				Bug fixes, additional code, server stuff, new modes." -1
 menuitem "Toca				Mapmodels, sounds, textures, other stuff." -1
 menuitem "" -1
 menuitem "Community Mappers" -1
@@ -138,7 +137,7 @@ menuitem "daMfr0				Map: ac_snow." -1
 menuitem "MitaMAN			Map: ac_depot, plus textures." -1
 menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hosting." -1
 menuitem "Archangel			Map: ac_urban." -1
-menuitem "Mr.Floppy			Map: ac_keller, plus textures." -1
+menuitem "Mr.Floppy			Map: ac_keller, ac_werk, plus textures and models." -1
 menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures." -1
 menuitem "R4zor				Map: ac_sunset, ac_gothic." -1
 menuitem "Halo				Map: ac_arctic." -1
@@ -151,6 +150,7 @@ menuitem "Special thanks" -1
 menuitem "----------------" -1
 menuitem "Aardappel & others		The Cube Game/Engine." -1
 menuitem "Arghvark			Previous project leader, game concept, code." -1
+menuitem "stef				Bug fixes, additional code, server stuff, new modes." -1
 menuitem "Verbal_				Q&A, advisor, lead tester, pro-coffee service." -1
 menuitem "Rick Helmus			Bot code." -1
 menuitem "absinth				Packaging AssaultCube for Mac." -1
