translated main menu to german, omitting header info in gettext calls, libs, test gettext call in menuitem render
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4629 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -570,6 +570,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\i18n.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\md2.h"
 				>
 				<FileConfiguration
@@ -1768,6 +1772,10 @@
 						Name="VCCLCompilerTool"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\src\i18n.cpp"
+				>
 			</File>
 			<File
 				RelativePath="..\src\log.cpp"
