localization scripts, samples, localization for cubescript
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4631 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -6,14 +6,14 @@ exec config/menus_mappack.cfg
 
 newmenu main
 
-menuitem "Multiplayer"			"showmenu multiplayer"
-menuitem "Singleplayer"			"showmenu singleplayer"
-menuitem "Settings"			"showmenu settings"
-menuitem "Demo"				[ showmenu "Play demo" ]
-menuitem "Editing" 			"showmenu editing"
-menuitem "Help"				"showmenu help"
-menuitem "About"			"showmenu about"
-menuitem "Quit"				"savequit"
+menuitem (_ "Multiplayer")	"showmenu multiplayer"
+menuitem (_ "Singleplayer")			"showmenu singleplayer"
+menuitem (_ "Settings")			"showmenu settings"
+menuitem (_ "Demo")				[ showmenu "Play demo" ]
+menuitem (_ "Editing") 			"showmenu editing"
+menuitem (_ "Help")				"showmenu help"
+menuitem (_ "About")			"showmenu about"
+menuitem (_ "Quit")				"savequit"
 
 
 // Start maps.
