--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -1991,6 +1991,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\config\locale.cfg"
+				>
+			</File>
+			<File
 				RelativePath="..\..\config\maprot.cfg"
 				>
 			</File>
